add responsive main section

--- a/style.css
+++ b/style.css
@@ -261,8 +261,8 @@ nav a:hover::before {
     align-items: center;
     border: 4px solid rgb(17, 17, 17, 0.1);
     box-shadow: 10px 10px 5px #d3d3d3;
-    font-size: 2.5rem;
-    color: pink;
+    font-size: 1.5rem;
+    color: #0099ff;
   }
 
   .books-title-1 {
